<resources>
    <string name="app_name">Notes-CM</string>
    <string name="change_language">Change Language</string>
    <string name="at1">AT1</string>
    <string name="at2">AT2</string>
    <string name="close_at2">Close AT2</string>
    <string name="student_info">Name: Andre Vale\nAge: 23\nNumber: 27986</string>
    <string name="change_language_pt">Portuguese</string>
    <string name="change_language_en">English</string>
    <string name="EmptyNoteMessage">Please enter a note</string>
    <string name="EmptyDateMessage">Please enter a date</string>
    <string name="EmptyDescriptionMessage">Please enter a description</string>
    <string name="DescriptionLengthMessage">Description must be longer than 5 characters</string>
    <string name="NoteCreatedMessage">Note created successfully!</string>
    <string name="NoteUpdatedMessage">Note updated successfully!</string>
    <string name="NoteDeletedMessage">Note deleted successfully!</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="DeleteNoteTitle">Delete Note</string>
    <string name="DeleteNoteMessage">Are you sure you want to delete this note?</string>
    <string name="NoteDetailsTitle">Note Details</string>
    <string name="NoteHint">Note</string>
    <string name="DateHint">Date</string>
    <string name="DescriptionHint">Description</string>
    <string name="SaveButton">Save</string>
    <string name="BackButton">Back</string>
    <string name="DeleteButton">Delete</string>
</resources>