<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AT2">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AT2">

        <Button
            android:id="@+id/btnCloseAT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStudentInfo"
            android:layout_marginTop="16dp"
            android:text="@string/close_at2" />

        <TextView
            android:id="@+id/tvPageIdentifierAT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at2" />

        <TextView
            android:id="@+id/tvStudentInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPageIdentifierAT2"
            android:layout_marginTop="16dp"
            android:text="@string/student_info" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>