<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@id/fragmentContainerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Seus componentes dentro do LinearLayout -->

        <Button
            android:id="@+id/btnOpenAT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open AT2" />

        <Button
            android:id="@+id/btnChangeLanguagePt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language_pt" />

        <Button
            android:id="@+id/btnChangeLanguageEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language_en" />

        <TextView
            android:id="@+id/tvPageIdentifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/at1" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>